--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       {{else}}
         <li class="{{#if hidden}}hide {{/if}}" data-group="{{group}}" data-name="{{name}}" data-version="{{version}}">
           <a href="#api-{{group}}-{{name}}" class="nav-list-item">{{title}}</a>
+          <span class="nav-list-item-url">{{url}}</span>
         </li>
       {{/if}}
     {{/if}}
